--- a/19-01-2023/style.css
+++ b/19-01-2023/style.css
@@ -59,8 +59,9 @@ body {
 }
 
 .hamburger__btn {
+  width: 32px;
+  height: 32px;
   position: relative;
-  padding: 5px;
   border: none;
   border-radius: 5px;
   border: 0.1px solid rgba(0, 0, 0, 0.185);
