--- a/26-01-2023/Esercizio_2/style.css
+++ b/26-01-2023/Esercizio_2/style.css
@@ -45,7 +45,7 @@ body {
     position: relative;
     display: flex;
     justify-content: center;
-    box-shadow: 0 0 4px rgba(0, 0, 0, 0.35);
+    box-shadow: 0 0 4px 4px rgba(0, 0, 0, 0.35);
     border-radius: 10px;
     height: 450px;
     width: 60px;
@@ -60,6 +60,7 @@ body {
     width: 100%;
     position: absolute;
     transition: 0.4s linear;  
+    box-shadow: 0 0 4px 4px rgba(0, 0, 0, 0.35);
     transition-property: width, background-color; 
     animation: progressAnimation 8s;
 }
@@ -74,11 +75,4 @@ body {
     width: 50px;
     height: 50px;
     transform: rotate(180deg);
-  }
-  
-  .btn{
-    z-index: 100;
-    width: 100px;
-    height: 100px;
-    border: 10px solid black;
   }
