--- a/27-01-2023/Esercizio_2/search/search.css
+++ b/27-01-2023/Esercizio_2/search/search.css
@@ -1,12 +1,45 @@
 body {
     display: flex;
+    width: 100%;
     justify-content: center;
     align-items: center;
     flex-direction: column;
 }
 
+.search__header {
+    width: 100vw;
+    padding: 0 40px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: rgb(73, 73, 73);
+    box-shadow: 1px 1px 10px rgba(255, 255, 255, 0.178);
+}
+
+.search__header img {
+    margin-left: 45.5px;
+    padding: 10px 20px;
+    width: 200px;
+}
+
+.search__header a {
+    margin-right: 65px;
+    border: 1px solid gray;
+    border-radius: 10px;
+    box-shadow: 1px 1px 6px rgb(255, 255, 255);
+    padding: 10px 20px;
+    color: white;
+    text-decoration: none;
+}
+
+a:hover {
+    background-color: white;
+    color: gray;
+}
+
 .input__wrapper {
-    margin-top: 150px;
+    margin-top: 25px;
+    margin-bottom: 40px;
     gap: 20px;
     padding: 20px;
     display: flex;
@@ -28,11 +61,82 @@ button {
 }
 
 .search__wrapper {
-    padding: 50px;
+    padding: 30px;
     margin-top: 20px;
-    width: 600px;
+    border-radius: 5px;
+    width: 800px;
     height: 600px;
     background-color: white;
-    box-shadow: 1px 1px 6px rgb(255, 255, 255);
-    border-radius: 10%;
+    box-shadow: 1px 1px 2px rgb(255, 255, 255);
+    overflow-y: auto;
+}
+
+.search__wrapper::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    border-radius: 10px;
+    background-color: #ffffff;
+    border-radius: 10px;
+}
+
+.search__wrapper::-webkit-scrollbar {
+    width: 12px;
+    border-radius: 10px;
+    background-color: #F5F5F5;
+}
+
+.search__wrapper::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
+    background-color: #2e2e2e27;
+}
+
+.search__card__wrapper {
+    display: flex;
+    gap: 10px;
+    margin-bottom: 10px;
+}
+
+.search__text__wrapper {
+    padding: 0 20px;
+    display: flex;
+    flex-direction: column;
+}
+
+.search__title {
+    margin: 0;
+    font-size: 1rem;
+    padding: 0;
+}
+
+.search__desc {
+    margin: 10px 0;
+    font-size: 0.8rem;
+    padding: 0;
+}
+
+.release__date {
+    font-size: 0.7rem;
+}
+
+
+.search__card {
+    cursor: pointer;
+    filter: grayscale(0.5);
+    transition: all 0.35s;
+}
+
+.search__card__img {
+    width: 110px;
+    height: 170px;
+    object-fit: cover;
+    border-radius: 12px;
+    box-shadow: 0 0 4px rgba(255, 255, 255, 0.466);
+}
+
+.footer__content {
+    width: 100vw;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgb(73, 73, 73);
 }
