--- a/React/LoL_Project/src/components/gallery/index.css
+++ b/React/LoL_Project/src/components/gallery/index.css
@@ -32,9 +32,11 @@
     .Gallery__container {
         flex-direction: column;
     }
-
+    
     .Gallery__items {
         width: 100%;
         height: 100%;
+        margin: auto;
+        padding: 0;
     }
 }
