--- a/React/LoL_Project/src/app.css
+++ b/React/LoL_Project/src/app.css
@@ -1,18 +1,37 @@
 .GallerySlider__container {
     display: flex;
-    width: 100vw;
     justify-content: center;
     align-items: center;
 }
 
 .nightMode {
-    background-color: rgb(22, 22, 22)
+    background-color: rgb(58, 58, 58);
 }
 
-.nightMode .Gallery,
+.nightMode .Footer p,
+.nightMode .Header a,
+.nightMode .GallerySlider__title,
 .nightMode .Gallery__container,
 .nightMode .ChampCard {
     color: white;
+}
+
+.nightMode .Header,
+.nightMode .Footer {
+    background-color: rgb(58, 58, 58);
+}
+
+.nightMode .Header__menu li:hover {
+    background-color: #F2F2F2;
+}
+
+.nightMode .Header__menu li:hover a {
+    color: black;
+}
+
+.GallerySlider__title {
+    text-align: center;
+    margin: 30px 0;
 }
 
 @media screen and (max-width: 650px) {
