--- a/React/LoL_Project/src/components/footer/index.css
+++ b/React/LoL_Project/src/components/footer/index.css
@@ -1,12 +1,13 @@
 .Footer {
     display: flex;
     flex-direction: column;
-    background-color: rgb(27, 27, 27);
+    background-color: #F2F2F2;
     justify-content: center;
     align-items: center;
     gap: 10px;
     padding: 20px;
     box-sizing: border-box;
+    border-top: 0.1px solid rgba(0, 0, 0, 0.055)
 }
 
 .Footer img {
@@ -14,5 +15,5 @@
 }
 
 .Footer p {
-    color: white;
+    color: black
 }
