--- a/React/LoL_Project/src/components/modal/index.css
+++ b/React/LoL_Project/src/components/modal/index.css
@@ -7,6 +7,7 @@
     align-items: center;
     top: 0;
     left: 0;
+    z-index: 19;
 }
 
 .Modal__overlay {
@@ -16,25 +17,39 @@
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.767);
-    z-index: 3;
+    z-index: 18;
 }
 
 .Modal__container {
-    z-index: 4;
+    z-index: 20;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     background-color: white;
+    position: relative;
     width: 600px;
     height: 400px;
     border-radius: 5px;
+    box-shadow: 0 2px 200px 20px rgba(255, 255, 255, 0.2)
+}
+
+.Modal__int__overlay {
+    z-index: 25;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.712);
+    position: absolute;
 }
 
 .Modal__text__content {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    z-index: 30;
     padding: 30px;
-}
-
-.Modal img {
-    padding: 30px;
-    width: 100px;
-    height: 100px;
+    color: white
 }
 
 .Modal__img__text {
@@ -44,10 +59,15 @@
 }
 
 .Modal p {
-    padding: 30px;
+    z-index: 31;
+    position: relative;
+    padding: 0 30px;
+    font-size: 18px;
+    color: white
 }
 
 .tags {
     display: flex;
+    color: white;
     gap: 5px;
 }
