--- a/06-04-2023/src/components/header/header.module.scss
+++ b/06-04-2023/src/components/header/header.module.scss
@@ -1,5 +1,7 @@
 .Header {   
-    position: relative;
+    position: fixed;
+    top: 0;
+    left: 0;
     background-color: rgb(56, 150, 118);
     margin-top: -20px;
     width: 100vw;
